--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -33,7 +33,7 @@ body {
     font-family: $ff-primary;
     font-size: var(--fs-body);
     line-height: $lh-primary;
-    color: $clr-dark;
+    color: $clr-accent-dark;
     font-weight: $fw-reg;
     font-style: normal; 
   
