--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,3 +5,10 @@
 @import './blocks/site-list.scss';
 @import './blocks/download.scss';
 @import './blocks/page-header.scss';
+@import './blocks/advantages.scss';
+@import './blocks/research.scss';
+@import './blocks/comments.scss';
+@import './blocks/slider.scss';
+@import './blocks/catalogue.scss';
+@import './blocks/contacts.scss';
+@import './blocks/page-footer.scss';
