--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,3 +12,8 @@
 @import './blocks/catalogue.scss';
 @import './blocks/contacts.scss';
 @import './blocks/page-footer.scss';
+@import './blocks/page-main.scss';
+@import './blocks/gallery.scss';
+@import './blocks/photo.scss';
+@import './blocks/user-photo.scss';
+@import './blocks/filter-settings.scss';
