--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,3 +17,5 @@
 @import './blocks/photo.scss';
 @import './blocks/user-photo.scss';
 @import './blocks/filter-settings.scss';
+@import './blocks/social.scss';
+@import './blocks/copyright.scss';
