--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,3 +19,9 @@
 @import './blocks/filter-settings.scss';
 @import './blocks/social.scss';
 @import './blocks/copyright.scss';
+@import './blocks/contest.scss';
+@import './blocks/fullname.scss';
+@import './blocks/achievements.scss';
+@import './blocks/user-contacts.scss';
+@import './blocks/platform.scss';
+@import './blocks/review.scss';
