--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -62,7 +62,7 @@ body {
 .button {
   display: block;
 
-  padding: 15px 35px;
+  padding: 18px 35px;
   
   font-family: $ff-primary;
   font-size: var(--fs-btn);
@@ -106,14 +106,13 @@ body {
 input[type="text"],
 input[type="tel"],
 input[type="email"] {
-  border: none;
-  padding: 14px 22px;
+  padding: 14px 20px;
 
   font-size: 1.125rem;
-  color: black;
+  color: $clr-accent-dark;
 
-  background-color: #f2f2f2;
-  border: 4px solid transparent;
+  background-color: transparent;
+  border: 2px solid $br-clr-primary;
 }
 
 // Состояния текстовых полей
@@ -122,7 +121,7 @@ input[type="text"]:hover,
 input[type="tel"]:hover,
 input[type="email"]:hover {
   background-color: #e5e5e5;
-  border: 4px solid #e5e5e5;
+  border: 2px solid #e5e5e5;
 }
 
 input[type="text"]:focus,
@@ -132,7 +131,7 @@ input[type="text"]:active,
 input[type="tel"]:active,
 input[type="email"]:active {
   background-color: #ffffff;
-  border: 4px solid #e5e5e5;
+  border: 2px solid #e5e5e5;
   outline: none;
 }
 
@@ -141,37 +140,43 @@ input[type="email"]:active {
 input[type="checkbox"] + label::before {
   content: '';
 
-  width: 56px;
-  height: 56px;
+  position: absolute;
+  top: 0;
+  left: 0;
 
-  background-color: #f2f2f2;
-  border-radius: 5px
-} 
+  width: 35px;
+  height: 35px;
 
-input[type="checkbox"]:checked + label::after {
+  background-color: #ffffff;
+  border: 2px solid #e5e5e5;
+  cursor: pointer;
+}
+
+input:checked + label::after {
   content: '';
 
-  width: 21px;
-  height: 13px;
+  position: absolute;
+  top: 9px;
+  left: 7px;
 
-  border-left: 3px solid #333333;
-  border-bottom: 3px solid #333333;
+  width: 21px;
+  height: 10px;
+
+  border: 2px solid $clr-accent-light;
+  border-top: none;
+  border-right: none;
   transform: rotate(-45deg);
 }
 
 // Состояния чекбоксов
 
-input[type="checkbox"]:hover + label::before,
-input[type="checkbox"]:focus + label::before {
-  background-color: #e5e5e5;
+input[type="checkbox"]:hover + label::before {
+  border: 2px solid #283645;
 }
 
+input[type="checkbox"]:focus + label::before,
 input[type="checkbox"]:active + label::before {
-  background-color: #d5d5d5;
-}
-
-input[type="checkbox"]:active:checked + label::after {
-  border-color: rgba(51, 51, 51, 0.3);
+  border: 2px solid #d22856;
 }
 
 // Радиокнопки
@@ -179,36 +184,42 @@ input[type="checkbox"]:active:checked + label::after {
 input[type="radio"] + label::before {
   content: "";
 
-  width: 56px;
-  height: 56px;
+  position: absolute;
+  top: 0;
+  left: 0;
 
-  background-color: #f2f2f2;
+  width: 35px;
+  height: 35px;
+
+  background-color: #ffffff;
+  border: 2px solid #e5e5e5;
   border-radius: 50%;
+  cursor: pointer;
 }
 
 input[type="radio"]:checked + label::after {
   content: "";
 
-  width: 22px;
-  height: 22px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
 
-  background-color: #333333;
+  width: 15px;
+  height: 15px;
+
+  background-color: $clr-accent-light;
   border-radius: 50%;
 }
 
 // Состояния радиокнопок
 
-input[type="radio"]:hover + label::before,
-input[type="radio"]:focus + label::before {
-  background-color: #e5e5e5;
+input[type="radio"]:hover + label::before {
+  border: 2px solid $clr-accent-dark;
 }
 
+input[type="radio"]:focus + label::before,
 input[type="radio"]:active + label::before {
-  background-color: #d5d5d5;
-}
-
-input[type="radio"]:active:checked + label::after {
-  background-color: rgba(51, 51, 51, 0.3);
+  border: 2px solid $clr-accent-light;
 }
 
 // Placeholders
@@ -216,29 +227,29 @@ input[type="radio"]:active:checked + label::after {
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
   font-family: $ff-primary;
-  color: $clr-dark;
-  font-weight: $fw-bold;
+  color: $clr-accent-dark;
+  font-weight: $fw-reg;
 }
 
 input:-moz-placeholder,
 textarea:-moz-placeholder { 
   font-family: $ff-primary;
-  color: $clr-dark;
-  font-weight: $fw-bold;
+  color: $clr-accent-dark;
+  font-weight: $fw-reg;
 }
 
 input::-moz-placeholder,
 textarea::-moz-placeholder {  
   font-family: $ff-primary;
-  color: $clr-dark;
-  font-weight: $fw-bold;
+  color: $clr-accent-dark;
+  font-weight: $fw-reg;
 }
 
 input:-ms-input-placeholder,
 textarea:-ms-input-placeholder {  
   font-family: $ff-primary;
-  color: $clr-dark;
-  font-weight: $fw-bold;
+  color: $clr-accent-dark;
+  font-weight: $fw-reg;
 }
 
 // Сброс настроек по умолчанию
