--- a/source/sass/blocks/fullname.scss
+++ b/source/sass/blocks/fullname.scss
@@ -1,6 +1,4 @@
 .fullname {
-    padding: 0 20px;
-
     border: none;
 
     &__item {
@@ -10,15 +8,63 @@
         margin-bottom: 25px;
     }
 
+    &__item:last-child {
+        margin-bottom: 0;
+    }
+
     &__label {
         margin-bottom: 10px;
         padding-left: 22px;
 
+        font-size: 0.875rem;
         color: $clr-accent-light;
         text-transform: uppercase;
     }
 
     &__field {
         width: 100%;
+    }
+}
+
+@media(min-width: $width-tbl) {
+    .fullname {
+    
+        &__item {
+            flex-direction: row;
+            align-items: center;
+    
+            margin-bottom: 25px;
+        }
+    
+        &__label {
+            margin-bottom: 0;
+            margin-right: 20px;
+            padding-left: 0;
+        }
+    }
+}
+
+@media(min-width: $width-dsk) {
+    .fullname {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+
+        &__list {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            height: 100%;
+        }
+
+        &__item {
+            margin-bottom: 50px;
+        }
+    
+        &__label {
+            margin-bottom: 0;
+            margin-right: 20px;
+            padding-left: 0;
+        }
     }
 }
