--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -16,9 +16,18 @@
         height: 6px;
         padding: 0;
 
-        background-color: #bec2c7;
+        background-color: rgba(40, 54, 69, 0.3);
         border: none;
         border-radius: 50%;     
+    }
+
+    &__toggle:hover,
+    &__toggle:focus {
+        background-color: rgba(40, 54, 69, 0.6);
+    }
+
+    &__active {
+        background-color: rgba(40, 54, 69, 0.1);
     }
 
     &__toggle--active {
@@ -43,5 +52,14 @@
 
     &__toggle-arrow--backward {
         transform: rotate(-45deg);
+    }
+
+    &__toggle-arrow:hover,
+    &__toggle-arrow:focus {
+        border-color: rgba(40, 54, 69, 0.6);
+    }
+
+    &__toggle-arrow:active {
+        border-color: rgba(40, 54, 69, 0.1);
     }
 }
