--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -9,26 +9,58 @@
     }
 
     &__link {
+        position: relative;
+
         display: block;
 
         width: 45px;
         height: 45px;
 
-        background-position: center;
-        background-repeat: no-repeat;
-        border: 1px solid rgba(40, 54, 69, 0.1);
+        
+        border: 3px solid rgba(40, 54, 69, 0.1);
         border-radius: 50%;
     }
 
-    &__link--twitter {
+    &__link::before {
+        content: '';
+
+        position: absolute;
+        top: 0; 
+        left: 0;
+
+        width: 45px;
+        height: 45px;
+        
+        background-position: center;
+        background-repeat: no-repeat;
+        border-radius: 50%;
+    }
+
+    &__link--twitter::before {
         background-image: url(../img/twitter-logo.svg);
+        background-position: top 12px left 11px;
     }
 
-    &__link--facebook {
+    &__link--facebook::before {
         background-image: url(../img/facebook-logo.svg);
+        background-position: top 9px left 15px;
     }
 
-    &__link--youtube {
+    &__link--youtube::before {
         background-image: url(../img/youtube-logo.svg);
+        background-position: top 12px left 14px;
+    }
+
+    &__link:hover,
+    &__link:focus {
+        border-color: rgba(40, 54, 69, 1);
+    }
+
+    &__link:active {
+        border-color: rgba(40, 54, 69, 0.1);
+    }
+
+    &__link:active::before {
+        opacity: 0.3;
     }
 }
