--- a/source/sass/blocks/user-contacts.scss
+++ b/source/sass/blocks/user-contacts.scss
@@ -1,10 +1,14 @@
 .user-contacts {
-    padding: 35px 20px 40px;
-
     border: none;
 
     &__title {
         display: none;
+
+        color: $clr-accent-light;
+        font-size: 0.875rem;
+        text-align: center;  
+        line-height: $lh-secondary; 
+        text-transform: uppercase;
     }
 
     &__item {
@@ -14,15 +18,100 @@
         margin-bottom: 25px;
     }
 
+    &__item:last-child {
+        margin-bottom: 0;
+    }
+
     &__label {
         margin-bottom: 10px;
         padding-left: 22px;
 
+        font-size: 0.875rem;
         color: $clr-accent-light;
         text-transform: uppercase;
     }
 
     &__field {
         width: 100%;
+    }
+}
+
+@media(min-width: $width-tbl) {
+    .user-contacts {
+        padding: 40px 60px 30px;
+    
+        border: 2px solid $br-clr-primary;
+    
+        &__title {
+            display: block;
+
+            padding: 0 30px;  
+        }
+    
+        &__item {
+            position: relative;
+
+            flex-direction: column-reverse;
+    
+            margin-bottom: 30px;
+        }
+
+        &__item::before,
+        &__item::after {
+            content: '';
+
+            position: absolute;
+            top: 0;
+            right: 0;
+
+            width: 60px;
+            height: 60px;
+        }
+
+        &__item::before {
+            background-color: $br-clr-primary;
+        }
+
+        &__item::after {
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+
+        &__item--tel::after {
+            background-image: url(../img/icon-phone.svg);
+        }
+        &__item--email::after {
+            background-image: url(../img/icon-email.svg);
+        }
+    
+        &__label {
+            margin-bottom: 0;
+            margin-top: 15px;
+        }
+    }
+}
+
+@media(min-width: $width-dsk) {
+    .user-contacts {
+        padding: 30px 60px 20px;
+
+        &__list {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+        }
+    
+        &__item {
+            width: calc(50% - 35px);
+            margin-bottom: 0;
+        }
+
+        &__item:nth-child(2n + 1) {
+            margin-right: 35px;
+        }
+
+        &__item:nth-child(2n) {
+            margin-left: 35px;
+        }
     }
 }
