--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -18,7 +18,8 @@
 
         background-color: rgba(40, 54, 69, 0.3);
         border: none;
-        border-radius: 50%;     
+        border-radius: 50%; 
+        cursor: pointer;    
     }
 
     &__toggle:hover,
