--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -7,6 +7,10 @@ $fw-light                :300;
 $fw-reg                  :400;
 $fw-bold                 :900;
 
+//Sizes 
+
+$max-width-dsk           :1200px;
+
 //Line-height
 
 $lh-primary              :1.7;
