--- a/source/sass/blocks/comments.scss
+++ b/source/sass/blocks/comments.scss
@@ -3,6 +3,14 @@
 
     text-align: center;
 
+    &__item {
+        display: none;
+    }
+
+    &__item--active {
+        display: block;
+    }
+
     &__author-name {
         margin-bottom: 20px;
 
@@ -29,9 +37,14 @@
     .comments {
         padding: 0 20px 20px;
 
-        &__item {
+        &__wrapper {
+            max-width: 700px;
+            margin: 0 auto;
+        }
+
+        &__item--active {
             display: flex;
-            flex-direction: column;
+            flex-direction: column;        
         }
 
         &__auther {
@@ -63,6 +76,35 @@
 
         padding: 190px 130px 25px;
 
+        &::before {
+            content: '';
+
+            position: absolute;
+            top: 70px;
+            left: 50%;
+            transform: translateX(-50%);
+
+            width: 80px;
+            height: 65px;
+
+            background-image: url(../img/bg-comment.svg);
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+
+        &__wrapper {
+            position: relative;
+
+            max-width: $max-width-dsk;
+            margin: 0 auto;
+        }
+
+        &__item {
+            max-width: 700px;
+            min-height: 300px;
+            margin: 0 auto;
+        }
+
         &__auther {
             margin-bottom: 0;
         }
@@ -81,15 +123,18 @@
     
         &__toggle-arrow {
             position: absolute;
-            top: 60%;
+            top: 10%;
+
+            cursor: pointer;
+            outline: none;
         }
 
         &__toggle-arrow--forward {
-            right: 30px;
+            right: 0;
         }
 
         &__toggle-arrow--backward {
-            left: 30px;
+            left: 0;
         }
     }
 } 
