--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -13,6 +13,7 @@
         padding: 20px;
 
         color: $clr-light;
+        font-weight: $fw-bold;
         text-align: center;
         text-transform: uppercase;
 
@@ -42,6 +43,7 @@
         &__link {
             padding: 0;
 
+            font-weight: $fw-reg;
             text-transform: none; 
         }
 
