--- a/source/sass/blocks/platform.scss
+++ b/source/sass/blocks/platform.scss
@@ -45,6 +45,7 @@
         padding: 50px 60px 55px;
     
         border: 2px solid $br-clr-primary;
+        background-color: transparent;
     
         &__title {
             float: none;
