--- a/source/sass/blocks/contest.scss
+++ b/source/sass/blocks/contest.scss
@@ -114,6 +114,12 @@
 
 @media(min-width: $width-dsk) {
     .contest {
+        padding: 100px 130px 0;
+
+        &__wrapper {
+            max-width: $max-width-dsk;
+            margin: 0 auto;
+        }
     
         &__description {
             margin-bottom: 80px;
@@ -123,7 +129,7 @@
             flex-direction: row;
             flex-wrap: wrap;
 
-            padding: 0 130px; 
+            padding: 0; 
         }
 
         &__item {
@@ -153,7 +159,7 @@
         }
     
         &__bottom {
-            padding: 70px 130px 0;
+            padding: 70px 0 0;
         }
     
         &__submit {
