--- a/docs/sass/blocks/comments.scss
+++ b/docs/sass/blocks/comments.scss
@@ -45,7 +45,9 @@
 
         &__item--active {
             display: flex;
-            flex-direction: column;        
+            flex-direction: column;
+            
+            min-height: 180px;
         }
 
         &__auther {
