--- a/docs/sass/blocks/catalogue.scss
+++ b/docs/sass/blocks/catalogue.scss
@@ -17,6 +17,7 @@
         text-transform: uppercase;
 
         border-collapse: collapse;
+        transition: transform 0.8s ease;
     }
 
     td:first-child {
