--- a/docs/sass/blocks/site-list.scss
+++ b/docs/sass/blocks/site-list.scss
@@ -18,6 +18,7 @@
         text-transform: uppercase;
 
         text-decoration: none;
+        transition: color 0.1s ease-in-out;
     }
 
     &__link[href]:hover,
