--- a/docs/sass/blocks/social.scss
+++ b/docs/sass/blocks/social.scss
@@ -19,6 +19,7 @@
         
         border: 3px solid rgba(40, 54, 69, 0.1);
         border-radius: 50%;
+        transition: border-color 0.2s ease-in;
     }
 
     &__link::before {
