--- a/docs/sass/global.scss
+++ b/docs/sass/global.scss
@@ -76,6 +76,8 @@ body {
   border: 3px solid $clr-accent-light;  
   cursor: pointer;
   border-radius: 30px;
+  transition: background-color 0.2s ease-in-out, 
+              color 0.1s ease-in-out;
 }
 
 .button--light {
@@ -89,6 +91,8 @@ body {
   
   border: 3px solid  rgba(40, 54, 69, 0.1);
   background-color: transparent;
+  transition: color 0.2s ease-in-out,
+              border 0.2s ease-in-out;
 }
 
 .button--secondary {
@@ -166,6 +170,7 @@ body {
 
   background-color: transparent;
   border: 2px solid $br-clr-primary;
+  transition: background-color 0.1s ease-out;
 }
 
 // Состояния текстовых полей
@@ -184,6 +189,10 @@ body {
 
 // Чекбоксы
 
+.checkbox + label {
+  cursor: pointer;
+}
+
 .checkbox + label::before {
   content: '';
 
@@ -196,7 +205,7 @@ body {
 
   background-color: #ffffff;
   border: 2px solid #e5e5e5;
-  cursor: pointer;
+  transition: border 0.2s ease-in-out;
 }
 
 .checkbox:checked + label::after {
@@ -218,15 +227,19 @@ body {
 // Состояния чекбоксов
 
 .checkbox:hover + label::before {
-  border: 2px solid #283645;
+  border: 2px solid $clr-accent-dark;
 }
 
 .checkbox:focus + label::before,
 .checkbox:active + label::before {
-  border: 2px solid #d22856;
+  border: 2px solid $clr-accent-light;
 }
 
 // Радиокнопки
+
+.radio-button + label {
+  cursor: pointer;
+}
 
 .radio-button + label::before {
   content: "";
@@ -241,7 +254,7 @@ body {
   background-color: #ffffff;
   border: 2px solid #e5e5e5;
   border-radius: 50%;
-  cursor: pointer;
+  transition: border 0.2s ease-in-out; 
 }
 
 .radio-button:checked + label::after {
